--- a/readme
+++ b/readme
@@ -1,3 +1,6 @@
 Connect to wearable emulator:
 
 adb -d forward tcp:5601 tcp:5601
+
+Connect to real device
+adb forward tcp:4444 localabstract:/adb-hub; adb connect localhost:4444
