--- a/readme
+++ b/readme
@@ -1,6 +1,13 @@
-Connect to wearable emulator:
+Android Wear App 
 
-adb -d forward tcp:5601 tcp:5601
 
-Connect to real device
-adb forward tcp:4444 localabstract:/adb-hub; adb connect localhost:4444
+# WearControl
+
+WearControl is an Android Wear App that allows you to change your handheld’s sound profile with a wearable device.
+
+Play Store Link: https://play.google.com/store/apps/details?id=eu.tobiasheine.wearcontrol
+
+## License
+
+Copyright (c) 2011-2014 GitHub, Inc. See the LICENSE file for license rights and
+limitations (Apache).
